responsividade e botão back

--- a/nivelA/index.html
+++ b/nivelA/index.html
@@ -12,7 +12,7 @@
             <h1>Select a Unit</h1>
         </header>
         <main>
-            <div class="units">
+            <div class="units" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; padding: 20px;">
                 <a href="unidade1/index.html" class="unit-button">Unit 1</a>
                 <a href="unidade2/index.html" class="unit-button">Unit 2</a>
                 <a href="unidade3/index.html" class="unit-button">Unit 3</a>
