--- a/nivelA/unidade1/Grammar2/index.html
+++ b/nivelA/unidade1/Grammar2/index.html
@@ -193,6 +193,10 @@
 </style>
 </head>
 <body>
+<button onclick="window.location.href='../index.html'" style="padding: 10px; background-color: #0056b3; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s ease;">
+    Back
+</button>
+
 
 <div class="container">
     <h1>There is / There are - Negative and Interrogative Forms</h1>
