--- a/nivelA/unidade1/MatchingGame/index.html
+++ b/nivelA/unidade1/MatchingGame/index.html
@@ -133,6 +133,10 @@
     </style>
 </head>
 <body>
+<button onclick="window.location.href='../index.html'" style="padding: 20px; background-color: #ffeb3b; color: #d84315; border: none; border-radius: 10px; font-size: 1.4em; cursor: pointer; transition: background-color 0.3s ease;">
+    Back
+</button>
+
     <h1>Matching Game</h1>
 
     <div class="container">
