--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -22,6 +22,10 @@
 </style>
 </head>
 <body>
+<button onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #3498db; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s;">
+    Back
+</button>
+
     <h1>Memory Game</h1>
     <p>Moves: <span id="move-counter">0</span></p>
     <button id="restart">Restart Game</button>
