--- a/nivelA/unidade1/QUIZ/index.html
+++ b/nivelA/unidade1/QUIZ/index.html
@@ -101,6 +101,10 @@
     </style>
 </head>
 <body>
+<button onclick="window.location.href='../index.html'" style="padding: 10px 20px; font-size: 1em; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">
+    Back
+</button>
+
 
 <h1>Hannah Quiz</h1>
 
