--- a/nivelA/unidade1/WordSearch/index.html
+++ b/nivelA/unidade1/WordSearch/index.html
@@ -87,6 +87,31 @@
 </style>
 </head>
 <body>
+<button onclick="window.location.href='../index.html'" id="back-button">
+    Back
+</button>
+<style>
+    #back-button {
+        margin: 20px;
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+        border: none;
+        border-radius: 5px;
+        background-color: #4a90e2;
+        color: white;
+        transition: background-color 0.3s ease;
+        position: absolute;
+        top: 10px;
+        left: 10px;
+    }
+    #back-button:hover {
+        background-color: #357ab7;
+    }
+</style>
+
+
+
     <h1>Hannah Word Search Game</h1>
     <button id="reset-button">Restart Game</button>
     <div id="word-search-container">
