--- a/nivelA/unidade1/Fill in the Blanks/index.html
+++ b/nivelA/unidade1/Fill in the Blanks/index.html
@@ -90,6 +90,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
+<button onclick="window.location.href='../index.html'" style="padding: 12px 20px; background-color: #2980b9; color: #fff; border: none; border-radius: 5px; font-size: 18px; cursor: pointer; transition: opacity 0.3s ease;">
+    Back
+</button>
+
     <h1>Hannah Fill in the Blanks</h1>
 
     <!-- Contêiner para as questões -->
