--- a/nivelA/unidade1/Fine Motor Skills/index.html
+++ b/nivelA/unidade1/Fine Motor Skills/index.html
@@ -117,6 +117,10 @@
     </style>
 </head>
 <body>
+<button onclick="window.location.href='../index.html'" style="padding: 10px 20px; background-color: #f8f8f8; color: #333; border: 1px solid #ccc; border-radius: 5px; font-size: 1.2rem; cursor: pointer;">
+    Back
+</button>
+
 
     <div class="header">
         <img src="Logo.png" alt="Logo">
