--- a/nivelA/unidade1/Mixed Letters/index.html
+++ b/nivelA/unidade1/Mixed Letters/index.html
@@ -139,6 +139,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
+<button onclick="window.location.href='../index.html'" style="padding: 15px 25px; background-color: #ff6347; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease;">
+    Back
+</button>
+
 
 <h1>Hannah Mixed Letters</h1>
 
