leitor em ingles

--- a/nivelA/unidade1/StoryCards/index.html
+++ b/nivelA/unidade1/StoryCards/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -93,7 +92,6 @@
     Back
 </button>
 
-
     <div class="container">
         <h1>Hannah StoryCard</h1>
         <button id="toggleButton" onclick="toggleView()">Read the story</button>
@@ -177,6 +175,7 @@
                 speechSynthesis.cancel();  // Stop current speech
             } else {
                 currentUtterance = new SpeechSynthesisUtterance(text);
+                currentUtterance.lang = 'en-US'; // Set the language to English (US)
                 speechSynthesis.speak(currentUtterance);  // Start speaking the text
             }
         }
