--- a/nivelA/unidade1/StoryCards/index.html
+++ b/nivelA/unidade1/StoryCards/index.html
@@ -37,28 +37,26 @@
             align-items: center;
             margin-bottom: 20px;
             padding: 40px;
-            height: 400px;
+            height: auto; /* Ajuste para o texto não ultrapassar o card */
             background-color: #f0f8ff;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
             cursor: pointer;
             text-align: center;
+            flex-wrap: wrap; /* Permite que o texto se ajuste dentro do card */
         }
         .card:hover {
             transform: translateY(-5px);
         }
         .card img {
-            max-width: 40%;
+            max-width: 100%; /* Ajuste para responsividade */
             border-radius: 10px;
-            margin-right: 20px;
-            transition: transform 0.3s ease;
-        }
-        .card img:hover {
-            transform: scale(1.5);
+            margin-bottom: 20px; /* Espaçamento entre a imagem e o texto no mobile */
+            transition: none; /* Remove a transição no mobile */
         }
         .card p {
-            max-width: 50%;
+            width: 100%; /* Texto ocupa 100% da largura do card */
             font-size: 1.5em;
             text-align: center;
             color: #333;
@@ -84,6 +82,19 @@
         }
         .pdf-button {
             margin-top: 30px;
+        }
+
+        /* Ajustes específicos para dispositivos móveis */
+        @media (max-width: 768px) {
+            .card {
+                padding: 20px;
+            }
+            .card img {
+                max-width: 100%; /* Imagem ocupa toda a largura do card no mobile */
+            }
+            .card p {
+                font-size: 1.2em; /* Reduz um pouco o tamanho da fonte no mobile */
+            }
         }
     </style>
 </head>
