--- a/nivelA/unidade1/StoryCards/index.html
+++ b/nivelA/unidade1/StoryCards/index.html
@@ -36,30 +36,33 @@
             justify-content: center;
             align-items: center;
             margin-bottom: 20px;
-            padding: 40px;
-            height: auto; /* Ajuste para o texto não ultrapassar o card */
+            padding: 20px;
+            height: auto;
             background-color: #f0f8ff;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
             cursor: pointer;
             text-align: center;
-            flex-wrap: wrap; /* Permite que o texto se ajuste dentro do card */
+            flex-wrap: wrap;
+            max-width: 100%;
         }
         .card:hover {
             transform: translateY(-5px);
         }
         .card img {
-            max-width: 100%; /* Ajuste para responsividade */
+            max-width: 100%;
             border-radius: 10px;
-            margin-bottom: 20px; /* Espaçamento entre a imagem e o texto no mobile */
-            transition: none; /* Remove a transição no mobile */
+            margin-bottom: 20px;
+            transition: transform 0.3s ease;
         }
         .card p {
-            width: 100%; /* Texto ocupa 100% da largura do card */
+            width: 100%;
             font-size: 1.5em;
             text-align: center;
             color: #333;
+            margin: 0;
+            word-break: break-word; /* Ajuste para palavras longas não saírem do card */
         }
         button {
             margin: 20px;
@@ -91,6 +94,9 @@
             }
             .card img {
                 max-width: 100%; /* Imagem ocupa toda a largura do card no mobile */
+            }
+            .card img:active {
+                transform: scale(1.5); /* Aumenta a imagem em 50% quando tocada */
             }
             .card p {
                 font-size: 1.2em; /* Reduz um pouco o tamanho da fonte no mobile */
