tamanho imagem comp

--- a/nivelA/unidade1/StoryCards/index.html
+++ b/nivelA/unidade1/StoryCards/index.html
@@ -62,7 +62,7 @@
             text-align: center;
             color: #333;
             margin: 0;
-            word-break: break-word; /* Ajuste para palavras longas não saírem do card */
+            word-break: break-word;
         }
         button {
             margin: 20px;
@@ -93,13 +93,26 @@
                 padding: 20px;
             }
             .card img {
-                max-width: 100%; /* Imagem ocupa toda a largura do card no mobile */
+                max-width: 100%;
             }
             .card img:active {
-                transform: scale(1.5); /* Aumenta a imagem em 50% quando tocada */
+                transform: scale(1.5); /* Aumenta a imagem em 50% quando tocada no mobile */
             }
             .card p {
-                font-size: 1.2em; /* Reduz um pouco o tamanho da fonte no mobile */
+                font-size: 1.2em;
+            }
+        }
+
+        /* Ajustes específicos para telas de computador */
+        @media (min-width: 769px) {
+            .card img {
+                max-width: 50%; /* Reduz a imagem em 50% para desktop */
+            }
+            .card p {
+                min-height: 400px; /* Define altura mínima igual ao card da imagem */
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
         }
     </style>
