--- a/nivelA/unidade1/StoryCards/index.html
+++ b/nivelA/unidade1/StoryCards/index.html
@@ -108,11 +108,12 @@
             .card img {
                 max-width: 50%; /* Reduz a imagem em 50% para desktop */
             }
-            .card p {
-                min-height: 400px; /* Define altura mínima igual ao card da imagem */
-                display: flex;
-                align-items: center;
-                justify-content: center;
+            .card p, .card img {
+                min-height: 300px; /* Define altura mínima igual ao card da imagem */
+                width: 50%; /* Define largura de 50% para ambos, imagem e texto */
+            }
+            .card {
+                height: 300px; /* Define a altura dos cards em 300px */
             }
         }
     </style>
