--- a/nivelA/unidade1/Fill in the Blanks/index.html
+++ b/nivelA/unidade1/Fill in the Blanks/index.html
@@ -39,6 +39,9 @@
         }
         .buttons {
             margin: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center; /* Ajuste para centralizar os botões */
         }
         .buttons button {
             margin: 10px;
@@ -47,6 +50,8 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            flex-grow: 1; /* Permite que os botões cresçam para ocupar a largura disponível */
+            max-width: 200px; /* Limita a largura máxima dos botões */
         }
         #tipsBtn {
             background-color: #f39c12;
@@ -86,11 +91,27 @@
             width: 250px; /* Tamanho maior do GIF */
             height: auto;
         }
+        .back-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 12px 20px;
+            background-color: #2980b9;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: opacity 0.3s ease;
+        }
+        .back-button:hover {
+            opacity: 0.9;
+        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-<button onclick="window.location.href='../index.html'" style="padding: 12px 20px; background-color: #2980b9; color: #fff; border: none; border-radius: 5px; font-size: 18px; cursor: pointer; transition: opacity 0.3s ease;">
+<button class="back-button" onclick="window.location.href='../index.html'">
     Back
 </button>
 
@@ -237,7 +258,7 @@
             });
 
             const utterance = new SpeechSynthesisUtterance(textToRead);
-            utterance.lang = 'en-US';
+            utterance.lang = 'en-US'; // Define o idioma para inglês
             synth.speak(utterance);
         }
 
