--- a/nivelA/unidade1/Fill in the Blanks/index.html
+++ b/nivelA/unidade1/Fill in the Blanks/index.html
@@ -41,7 +41,8 @@
             margin: 20px;
             display: flex;
             flex-wrap: wrap;
-            justify-content: center; /* Ajuste para centralizar os botões */
+            flex-direction: column; /* Colocar os botões em uma coluna */
+            align-items: center;
         }
         .buttons button {
             margin: 10px;
@@ -50,8 +51,8 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            flex-grow: 1; /* Permite que os botões cresçam para ocupar a largura disponível */
-            max-width: 200px; /* Limita a largura máxima dos botões */
+            width: 100%; /* Garantir que os botões ocupem toda a largura disponível */
+            max-width: 300px; /* Limita a largura máxima dos botões */
         }
         #tipsBtn {
             background-color: #f39c12;
@@ -106,6 +107,24 @@
         }
         .back-button:hover {
             opacity: 0.9;
+        }
+
+        /* Ajustes de responsividade para dispositivos móveis */
+        @media (max-width: 768px) {
+            .question-text {
+                font-size: 18px;
+                width: 90%;
+            }
+            .blank {
+                width: 100px;
+            }
+            .buttons {
+                flex-direction: column;
+            }
+            .buttons button {
+                width: 90%; /* Certifique-se de que os botões ocupem quase toda a largura */
+                max-width: 100%; /* Remove a limitação de largura em telas pequenas */
+            }
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
