--- a/nivelA/unidade1/Fill in the Blanks/index.html
+++ b/nivelA/unidade1/Fill in the Blanks/index.html
@@ -14,17 +14,17 @@
         h1 {
             color: #2c3e50;
             margin-top: 30px;
-            font-size: 36px;
+            font-size: 24px; /* Reduzido para melhorar a leitura em dispositivos móveis */
         }
         .question-text {
-            margin: 20px auto;
-            font-size: 24px;
-            width: 80%;
+            margin: 10px auto;
+            font-size: 18px; /* Reduzido para caber melhor em telas menores */
+            width: 90%;
             color: #34495e;
         }
         .blank {
             display: inline-block;
-            width: 150px;
+            width: 100px; /* Reduzido para se ajustar melhor ao tamanho do texto */
             border-bottom: 2px solid #34495e;
             text-align: center;
             margin-left: 5px;
@@ -38,21 +38,19 @@
             border-bottom: 2px solid #e74c3c;
         }
         .buttons {
-            margin: 20px;
+            margin: 10px;
             display: flex;
             flex-wrap: wrap;
-            flex-direction: column; /* Colocar os botões em uma coluna */
-            align-items: center;
+            justify-content: center;
         }
         .buttons button {
-            margin: 10px;
-            padding: 12px 20px;
-            font-size: 18px;
+            margin: 5px;
+            padding: 10px 15px;
+            font-size: 14px; /* Reduzido para melhor visualização em dispositivos móveis */
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            width: 100%; /* Garantir que os botões ocupem toda a largura disponível */
-            max-width: 300px; /* Limita a largura máxima dos botões */
+            width: 100px; /* Definido para garantir que os botões caibam bem na tela */
         }
         #tipsBtn {
             background-color: #f39c12;
@@ -86,22 +84,22 @@
             color: #2c3e50;
         }
         .success-container {
-            margin-top: 30px;
+            margin-top: 20px;
         }
         .success-container img {
-            width: 250px; /* Tamanho maior do GIF */
+            width: 200px; /* Ajuste para telas menores */
             height: auto;
         }
         .back-button {
             position: absolute;
             top: 10px;
             left: 10px;
-            padding: 12px 20px;
+            padding: 10px 15px;
             background-color: #2980b9;
             color: #fff;
             border: none;
             border-radius: 5px;
-            font-size: 18px;
+            font-size: 14px;
             cursor: pointer;
             transition: opacity 0.3s ease;
         }
@@ -112,18 +110,14 @@
         /* Ajustes de responsividade para dispositivos móveis */
         @media (max-width: 768px) {
             .question-text {
-                font-size: 18px;
-                width: 90%;
+                font-size: 16px; /* Mais redução para caber melhor em telas muito pequenas */
+                width: 95%;
             }
             .blank {
-                width: 100px;
-            }
-            .buttons {
-                flex-direction: column;
+                width: 80px; /* Ajuste para dispositivos móveis */
             }
             .buttons button {
-                width: 90%; /* Certifique-se de que os botões ocupem quase toda a largura */
-                max-width: 100%; /* Remove a limitação de largura em telas pequenas */
+                width: 80px; /* Reduzido para melhor se ajustar à tela */
             }
         }
     </style>
