--- a/nivelA/unidade1/Fill in the Blanks/index.html
+++ b/nivelA/unidade1/Fill in the Blanks/index.html
@@ -18,13 +18,14 @@
         }
         .question-text {
             margin: 20px auto;
-            font-size: 24px;
-            width: 80%;
+            font-size: 22px;
+            width: 90%;
+            max-width: 600px;
             color: #34495e;
         }
         .blank {
             display: inline-block;
-            width: 150px;
+            width: 120px;
             border-bottom: 2px solid #34495e;
             text-align: center;
             margin-left: 5px;
@@ -41,18 +42,17 @@
             margin: 20px;
             display: flex;
             flex-wrap: wrap;
-            flex-direction: column; /* Colocar os botões em uma coluna */
-            align-items: center;
+            justify-content: center;
         }
         .buttons button {
             margin: 10px;
-            padding: 12px 20px;
-            font-size: 18px;
+            padding: 10px 15px;
+            font-size: 16px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            width: 100%; /* Garantir que os botões ocupem toda a largura disponível */
-            max-width: 300px; /* Limita a largura máxima dos botões */
+            flex: 1 1 auto;
+            max-width: 200px;
         }
         #tipsBtn {
             background-color: #f39c12;
@@ -84,55 +84,23 @@
             border: 1px solid #ccc;
             display: none;
             color: #2c3e50;
+            font-size: 18px;
+            width: 90%;
+            max-width: 600px;
+            margin: 20px auto;
         }
         .success-container {
             margin-top: 30px;
         }
         .success-container img {
-            width: 250px; /* Tamanho maior do GIF */
+            width: 200px; /* Tamanho maior do GIF */
             height: auto;
-        }
-        .back-button {
-            position: absolute;
-            top: 20px; /* Descola do canto superior */
-            left: 20px; /* Descola do canto esquerdo */
-            padding: 12px 20px;
-            background-color: #2980b9;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: opacity 0.3s ease;
-        }
-        .back-button:hover {
-            opacity: 0.9;
-        }
-
-        /* Ajustes de responsividade para dispositivos móveis */
-        @media (max-width: 768px) {
-            .question-text {
-                font-size: 18px;
-                width: 90%;
-            }
-            .blank {
-                width: 100px;
-            }
-            .buttons {
-                flex-direction: column;
-            }
-            .buttons button {
-                width: 90%; /* Certifique-se de que os botões ocupem quase toda a largura */
-                max-width: 100%; /* Remove a limitação de largura em telas pequenas */
-                padding: 15px 25px; /* Aumenta o padding para botões maiores */
-                font-size: 20px; /* Aumenta o tamanho do texto dos botões */
-            }
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-<button class="back-button" onclick="window.location.href='../index.html'">
+<button onclick="window.location.href='../index.html'" style="padding: 12px 20px; background-color: #2980b9; color: #fff; border: none; border-radius: 5px; font-size: 18px; cursor: pointer; transition: opacity 0.3s ease;">
     Back
 </button>
 
@@ -279,7 +247,7 @@
             });
 
             const utterance = new SpeechSynthesisUtterance(textToRead);
-            utterance.lang = 'en-US'; // Define o idioma para inglês
+            utterance.lang = 'en-US';
             synth.speak(utterance);
         }
 
