--- a/nivelA/unidade1/Fill in the Blanks/index.html
+++ b/nivelA/unidade1/Fill in the Blanks/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah Fill in the Blanks</title>
     <style>
         body {
@@ -18,14 +18,13 @@
         }
         .question-text {
             margin: 20px auto;
-            font-size: 22px;
-            width: 90%;
-            max-width: 600px;
+            font-size: 24px;
+            width: 80%;
             color: #34495e;
         }
         .blank {
             display: inline-block;
-            width: 120px;
+            width: 150px;
             border-bottom: 2px solid #34495e;
             text-align: center;
             margin-left: 5px;
@@ -41,18 +40,17 @@
         .buttons {
             margin: 20px;
             display: flex;
-            flex-wrap: wrap;
             justify-content: center;
+            flex-wrap: wrap;
         }
         .buttons button {
             margin: 10px;
-            padding: 10px 15px;
-            font-size: 16px;
+            padding: 12px 20px;
+            font-size: 18px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            flex: 1 1 auto;
-            max-width: 200px;
+            flex: 1;
         }
         #tipsBtn {
             background-color: #f39c12;
@@ -84,17 +82,22 @@
             border: 1px solid #ccc;
             display: none;
             color: #2c3e50;
-            font-size: 18px;
-            width: 90%;
-            max-width: 600px;
-            margin: 20px auto;
         }
         .success-container {
             margin-top: 30px;
         }
         .success-container img {
-            width: 200px; /* Tamanho maior do GIF */
+            width: 250px; /* Tamanho maior do GIF */
             height: auto;
+        }
+
+        @media (max-width: 768px) {
+            .buttons {
+                flex-direction: column;
+            }
+            .question-text {
+                font-size: 36px; /* Aumenta o texto da atividade em 50% */
+            }
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
