--- a/nivelA/unidade1/Fill in the Blanks/index.html
+++ b/nivelA/unidade1/Fill in the Blanks/index.html
@@ -7,7 +7,6 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #ffffff; /* Fundo branco */
-            text-align: center;
             margin: 0;
             padding: 0;
         }
@@ -15,12 +14,15 @@
             color: #2c3e50;
             margin-top: 30px;
             font-size: 36px;
+            text-align: center;
         }
         .question-text {
             margin: 20px auto;
             font-size: 24px;
-            width: 80%;
+            width: 90%;
+            max-width: 1000px;
             color: #34495e;
+            text-align: left;
         }
         .blank {
             display: inline-block;
@@ -51,6 +53,7 @@
             border-radius: 5px;
             cursor: pointer;
             flex: 1;
+            min-width: 150px;
         }
         #tipsBtn {
             background-color: #f39c12;
@@ -76,21 +79,23 @@
             opacity: 0.9;
         }
         .tips {
-            margin-top: 20px;
+            margin: 20px auto;
             padding: 10px;
             background-color: #ecf0f1;
             border: 1px solid #ccc;
             display: none;
             color: #2c3e50;
+            width: 90%;
+            max-width: 1000px;
         }
         .success-container {
-            margin-top: 30px;
+            margin: 20px auto;
+            text-align: center;
         }
         .success-container img {
             width: 250px; /* Tamanho maior do GIF */
             height: auto;
         }
-
         @media (max-width: 768px) {
             .buttons {
                 flex-direction: column;
@@ -99,28 +104,25 @@
                 font-size: 36px; /* Aumenta o texto da atividade em 50% */
             }
         }
+        #backBtn {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 12px 20px;
+            background-color: #2980b9;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-<button onclick="window.location.href='../index.html'" style="padding: 12px 20px; background-color: #2980b9; color: #fff; border: none; border-radius: 5px; font-size: 18px; cursor: pointer; transition: opacity 0.3s ease;">
-    Back
-</button>
+<button id="backBtn" onclick="window.location.href='../index.html'">Back</button>
 
     <h1>Hannah Fill in the Blanks</h1>
-
-    <!-- Contêiner para as questões -->
-    <div class="question-text" id="questionsContainer"></div>
-
-    <!-- Botões de navegação -->
-    <div class="buttons">
-        <button id="previousBtn" onclick="previousQuestion()">⏪ Previous</button>
-        <button id="tipsBtn" onclick="showTips()">Tips</button>
-        <button id="readBtn" onclick="readText()">Read</button>
-        <button id="finishBtn" onclick="checkAnswers()">Finish</button>
-        <button id="nextBtn" onclick="nextQuestion()">Next ⏩</button>
-        <button id="pdfBtn" onclick="generatePDF()">Generate PDF</button>
-    </div>
 
     <!-- Contêiner para o GIF e o som -->
     <div class="success-container" id="successContainer" style="display:none;">
@@ -128,8 +130,21 @@
         <audio id="successSound" src="success.mp3"></audio>
     </div>
 
+    <!-- Contêiner para as questões -->
+    <div class="question-text" id="questionsContainer"></div>
+
     <!-- Contêiner para as dicas -->
     <div id="tipsContainer" class="tips"></div>
+
+    <!-- Botões de navegação -->
+    <div class="buttons">
+        <button id="previousBtn" onclick="previousQuestion()">⏪ Previous</button>
+        <button id="nextBtn" onclick="nextQuestion()">Next ⏩</button>
+        <button id="tipsBtn" onclick="showTips()">Tips</button>
+        <button id="readBtn" onclick="readText()">Read</button>
+        <button id="finishBtn" onclick="checkAnswers()">Finish</button>
+        <button id="pdfBtn" onclick="generatePDF()">Generate PDF</button>
+    </div>
 
     <script>
         let currentQuestion = 1;
@@ -229,6 +244,7 @@
 
             if (allCorrect) {
                 document.getElementById('successContainer').style.display = 'block';
+                document.getElementById('successContainer').scrollIntoView({ behavior: 'smooth' });
                 const successSound = document.getElementById('successSound');
                 successSound.play();
 
