--- a/nivelA/unidade1/StoryCards/index.html
+++ b/nivelA/unidade1/StoryCards/index.html
@@ -37,7 +37,6 @@
             align-items: center;
             margin-bottom: 20px;
             padding: 20px;
-            height: auto;
             background-color: #f0f8ff;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -45,13 +44,12 @@
             cursor: pointer;
             text-align: center;
             flex-wrap: wrap;
-            max-width: 100%;
         }
         .card:hover {
             transform: translateY(-5px);
         }
         .card img {
-            max-width: 100%;
+            width: 100%; /* Agora a imagem ocupará 100% da largura da caixa */
             border-radius: 10px;
             margin-bottom: 20px;
             transition: transform 0.3s ease;
@@ -106,14 +104,11 @@
         /* Ajustes específicos para telas de computador */
         @media (min-width: 769px) {
             .card img {
-                max-width: 50%; /* Reduz a imagem em 50% para desktop */
+                max-width: 100%; /* A imagem ocupa 100% da largura da caixa */
             }
-            .card p, .card img {
-                min-height: 300px; /* Define altura mínima igual ao card da imagem */
-                width: 50%; /* Define largura de 50% para ambos, imagem e texto */
-            }
-            .card {
-                height: 300px; /* Define a altura dos cards em 300px */
+            .card p {
+                min-height: auto; /* Remove a altura mínima */
+                width: 100%; /* Texto ocupa 100% da largura da caixa */
             }
         }
     </style>
