ajuste imagem e texto

--- a/nivelA/unidade1/StoryCards/index.html
+++ b/nivelA/unidade1/StoryCards/index.html
@@ -33,7 +33,7 @@
         }
         .card {
             display: flex;
-            justify-content: center;
+            flex-direction: column; /* Alinha os elementos em coluna */
             align-items: center;
             margin-bottom: 20px;
             padding: 20px;
@@ -43,19 +43,20 @@
             transition: transform 0.3s ease;
             cursor: pointer;
             text-align: center;
-            flex-wrap: wrap;
+            width: 100%; /* Garante que a largura do card seja 100% */
         }
         .card:hover {
             transform: translateY(-5px);
         }
         .card img {
-            width: 100%; /* Agora a imagem ocupará 100% da largura da caixa */
+            width: auto;
+            max-width: 100%;
+            height: auto;
             border-radius: 10px;
             margin-bottom: 20px;
             transition: transform 0.3s ease;
         }
         .card p {
-            width: 100%;
             font-size: 1.5em;
             text-align: center;
             color: #333;
@@ -87,28 +88,11 @@
 
         /* Ajustes específicos para dispositivos móveis */
         @media (max-width: 768px) {
-            .card {
-                padding: 20px;
-            }
             .card img {
                 max-width: 100%;
             }
-            .card img:active {
-                transform: scale(1.5); /* Aumenta a imagem em 50% quando tocada no mobile */
-            }
             .card p {
                 font-size: 1.2em;
-            }
-        }
-
-        /* Ajustes específicos para telas de computador */
-        @media (min-width: 769px) {
-            .card img {
-                max-width: 100%; /* A imagem ocupa 100% da largura da caixa */
-            }
-            .card p {
-                min-height: auto; /* Remove a altura mínima */
-                width: 100%; /* Texto ocupa 100% da largura da caixa */
             }
         }
     </style>
