--- a/nivelA/unidade1/Fill in the Blanks/index.html
+++ b/nivelA/unidade1/Fill in the Blanks/index.html
@@ -15,6 +15,7 @@
             margin-top: 30px;
             font-size: 36px;
             text-align: center;
+            padding-top: 50px; /* Espaço para o botão Back */
         }
         .question-text {
             margin: 20px auto;
@@ -115,6 +116,7 @@
             border-radius: 5px;
             font-size: 18px;
             cursor: pointer;
+            z-index: 1000; /* Garante que o botão fique sobre outros elementos */
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
