--- a/nivelA/unidade1/StoryCards/index.html
+++ b/nivelA/unidade1/StoryCards/index.html
@@ -15,12 +15,11 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            height: 100vh;
+            min-height: 100vh;
         }
         .container {
             max-width: 900px;
             margin: 30px auto;
-            text-align: center;
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
@@ -30,11 +29,13 @@
             font-size: 2.5em;
             color: #4CAF50;
             margin-bottom: 30px;
+            text-align: center;
         }
         .title {
             font-size: 2em;
             color: #333;
             margin: 20px 0;
+            text-align: center;
         }
         .card {
             display: flex;
@@ -48,16 +49,15 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
             cursor: pointer;
-            text-align: center;
             width: 100%;
-            min-height: 100px; /* Define um tamanho mínimo para o card */
+            min-height: 100px;
         }
         .card:hover {
             transform: translateY(-5px);
         }
         .card img {
-            max-width: 95vw; /* 95% da largura da viewport */
-            max-height: 85vh; /* 85% da altura da viewport */
+            max-width: 100%;
+            max-height: calc(100vh - 150px); /* Garante que a imagem não ultrapasse a altura da viewport */
             width: auto;
             height: auto;
             border-radius: 10px;
@@ -73,7 +73,15 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            min-height: 100px; /* Define um tamanho mínimo para o texto */
+            min-height: 100px;
+            width: 100%;
+        }
+        .card-text {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 300px; /* Tamanho mínimo para igualar ao tamanho da imagem */
+            width: 100%;
         }
         button {
             margin: 20px;
@@ -101,8 +109,8 @@
         /* Ajustes específicos para dispositivos móveis */
         @media (max-width: 768px) {
             .card img {
-                max-width: 90vw;
-                max-height: 80vh;
+                max-width: 100%;
+                max-height: 70vh;
             }
             .card p {
                 font-size: 1.2em;
@@ -180,7 +188,7 @@
                 const cardElement = document.createElement('div');
                 cardElement.className = 'card';
                 cardElement.innerHTML = showText 
-                    ? `<p>${card.text}</p>`
+                    ? `<div class="card-text"><p>${card.text}</p></div>`
                     : `<img src="images/${card.image}.jpeg" alt="Image">`;
                 
                 // Adding event listener to each card for text-to-speech functionality
