--- a/nivelA/unidade1/StoryCards/index.html
+++ b/nivelA/unidade1/StoryCards/index.html
@@ -19,11 +19,13 @@
         }
         .container {
             max-width: 900px;
+            width: 100%;
             margin: 30px auto;
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
+            overflow: hidden; /* Garante que nenhum conteúdo saia do contêiner */
         }
         h1 {
             font-size: 2.5em;
@@ -50,7 +52,9 @@
             transition: transform 0.3s ease;
             cursor: pointer;
             width: 100%;
+            max-width: 100%;
             min-height: 100px;
+            box-sizing: border-box; /* Inclui padding e borda na largura e altura do card */
         }
         .card:hover {
             transform: translateY(-5px);
@@ -75,6 +79,7 @@
             justify-content: center;
             min-height: 100px;
             width: 100%;
+            box-sizing: border-box;
         }
         .card-text {
             display: flex;
@@ -82,6 +87,7 @@
             justify-content: center;
             min-height: 300px; /* Tamanho mínimo para igualar ao tamanho da imagem */
             width: 100%;
+            box-sizing: border-box;
         }
         button {
             margin: 20px;
